--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -6,3 +6,8 @@ server.port=8080
 spring.profiles.active=dev
 
 
+#数据源
+spring.datasource.url=jdbc:mysql://localhost:3306/mywiki?characterEncoding=UTF8&&autoReconnect=true&&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=13276785241
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
