--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "ant-design-vue": "^2.1.6",
     "axios": "^0.21.1",
     "vue": "^3.0.0",
