--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -14,3 +14,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis
 mybatis.mapper-locations=classpath:/mapping/**/*.xml
+
+logging.level.com.example.mywiki.mapper=trace
