--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>my-wiki</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>my-wiki</name>
-    <description>Demo project for Spring Boot</description>
+    <description>一个SpringBoot wiki知识库系统</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
@@ -25,18 +30,8 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -111,42 +106,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.7</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.mybatis.generator</groupId>
-                        <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.7</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>8.0.22</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>mybatis-generator</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <!--允许移动生成的文件-->
-                    <verbose>true</verbose>
-                    <!--允许自动覆盖文件，开发环境不能加，会覆盖别人写的-->
-<!--                    <overwrite>true</overwrite>-->
-                    <!--mybatis-generator配置文件路径-->
-                    <configurationFile>
-                        src/main/resources/config/mybatis-generator.xml
-                    </configurationFile>
-                </configuration>
             </plugin>
         </plugins>
     </build>
