--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "ant-design-vue": "^2.1.6",
+    "ant-design-vue": "^2.2.0-beta.6",
     "axios": "^0.21.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
