--- a/web/.env.prod
+++ b/web/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV = production
-VUE_APP_SERVER=http://wiki.ysboke.cn
-VUE_APP_WS_SERVER=ws://wiki.ysboke.cn
+VUE_APP_SERVER=http://item.ysboke.cn:8001
+VUE_APP_WS_SERVER=ws://item.ysboke.cn:8001
